package info.jab.cursor.client.model;

public enum AgentStatus {
    CREATING,
    RUNNING,
    FINISHED,
    ERROR,
    EXPIRED
}
