@startuml
!theme plain
scale 0.6
title Cursor API Client Module - Class Diagram

package "info.jab.cursor.client" {
  interface CursorAgentManagement {
    + launch(String, String, String, Boolean) : AgentResponse
    + followUp(String, String) : FollowUpResponse
    + delete(String) : DeleteAgentResponse
  }
  
  interface CursorAgentInformation {
    + getAgents(Integer, String) : AgentsList
    + getStatus(String) : AgentResponse
    + getAgentConversation(String) : ConversationResponse
  }
  
  interface CursorAgentGeneralEndpoints {
    + getApiKeyInfo() : ApiKeyInfo
    + getModels() : List<String>
    + getRepositories() : List<String>
  }
}

package "info.jab.cursor.client.impl" {
  class CursorAgentManagementImpl {
    - String apiKey
    - DefaultApi defaultApi
    - Logger logger
    + launch(String, String, String, Boolean) : AgentResponse
    + followUp(String, String) : FollowUpResponse
    + delete(String) : DeleteAgentResponse
    - getAuthHeaders() : Map<String, String>
    - createLaunchAgentRequest(String, String, String, boolean) : CreateAgentRequest
  }
  
  class CursorAgentInformationImpl {
    - String apiKey
    - DefaultApi defaultApi
    - Logger logger
    + getAgents(Integer, String) : AgentsList
    + getStatus(String) : AgentResponse
    + getAgentConversation(String) : ConversationResponse
    - getAuthHeaders() : Map<String, String>
  }
  
  class CursorAgentGeneralEndpointsImpl {
    - String apiKey
    - DefaultApi defaultApi
    - Logger logger
    + getApiKeyInfo() : ApiKeyInfo
    + getModels() : List<String>
    + getRepositories() : List<String>
    - getAuthHeaders() : Map<String, String>
  }
}

package "info.jab.cursor.client.model" {
  class AgentResponse {
    + String id
    + AgentStatus status
    + String model
    + String repository
    + LocalDateTime createdAt
    + from(CreateAgentResponse) : AgentResponse
  }
  
  class FollowUpResponse {
    + String id
    + AgentStatus status
    + from(AddFollowupResponse) : FollowUpResponse
  }
  
  class DeleteAgentResponse {
    + String id
    + from(DeleteAgentResponse) : DeleteAgentResponse
  }
  
  class ConversationResponse {
    + String agentId
    + List<ConversationMessage> messages
    + from(GetAgentConversationResponse) : ConversationResponse
  }
  
  class ConversationMessage {
    + String text
    + String role
    + LocalDateTime timestamp
  }
  
  class AgentsList {
    + List<AgentResponse> agents
    + String cursor
    + boolean hasMore
    + from(GetAgentsResponse) : AgentsList
  }
  
  class ApiKeyInfo {
    + String apiKey
    + from(GetApiKeyInfoResponse) : ApiKeyInfo
  }
  
  class Source {
    + String repository
    + String ref
  }
  
  class Target {
    + Boolean autoCreatePr
  }
  
  enum AgentStatus {
    CREATING
    RUNNING
    COMPLETED
    FAILED
  }
}

' Relationships
CursorAgentManagementImpl ..|> CursorAgentManagement
CursorAgentInformationImpl ..|> CursorAgentInformation
CursorAgentGeneralEndpointsImpl ..|> CursorAgentGeneralEndpoints

CursorAgentManagementImpl --> DefaultApi
CursorAgentInformationImpl --> DefaultApi
CursorAgentGeneralEndpointsImpl --> DefaultApi

CursorAgentManagement --> AgentResponse
CursorAgentManagement --> FollowUpResponse
CursorAgentManagement --> DeleteAgentResponse

CursorAgentInformation --> AgentResponse
CursorAgentInformation --> AgentsList
CursorAgentInformation --> ConversationResponse

CursorAgentGeneralEndpoints --> ApiKeyInfo

AgentResponse --> AgentStatus
FollowUpResponse --> AgentStatus
ConversationResponse --> ConversationMessage

@enduml
